--- a/src/templates/products/products.html
+++ b/src/templates/products/products.html
@@ -32,12 +32,9 @@
                         <div class="sidebar__item">
                             <h4>{% trans 'Department' %}</h4>
                             <ul>
-                                <li><a href="{% url 'products:categories' 'Meats'%}">{% trans 'Meats' %}</a></li>
-								<li><a href="{% url 'products:categories' 'Vegetables'%}">{% trans 'Vegetables' %}</a></li>
-								<li><a href="{% url 'products:categories' 'Fruits'%}">{% trans 'Fruits' %}</a></li>
-								<li><a href="{% url 'products:categories' 'Juice'%}">{% trans 'Juice' %}</a></li>
-								<li><a href="{% url 'products:categories' 'Fastfood'%}">{% trans 'Fastfood' %}</a></li>
-								
+                                {% for category in categories  %}
+									<li><a href="{% url 'products:categories' category.name %}">{{category.name}}</a></li>
+								{% endfor %}
                             </ul>
                         </div>
                         <div class="sidebar__item">
@@ -123,7 +120,7 @@
                         <div class="row">
                             <div class="product__discount__slider owl-carousel">
                                {% for product in items %}
-							   {% if product.discount > 0 %}
+							   {% if product.discount %}
 							   <div class="col-lg-4">
                                     <div class="product__discount__item">
                                         <div class="product__discount__item__pic set-bg"
