--- a/src/templates/products/categories.html
+++ b/src/templates/products/categories.html
@@ -55,23 +55,38 @@
                         </div>
                     </div>
                     <div class="row">
-						{% for ctgy in product %}
-                        <div class="col-lg-4 col-md-6 col-sm-6">
-                            <div class="product__item">
-                                <div class="product__item__pic set-bg" data-setbg="{{ ctgy.image.url }}">
-                                    <ul class="product__item__pic__hover">
-                                        <li><a href="{% url 'products:add_to_favorites' ctgy.slug %}"><i class="fa fa-heart"></i></a></li>
-                                        <li><a href="{% url 'products:product_detail' ctgy.slug %}"><i class="fa fa-retweet"></i></a></li>
-                                        <li><a href="{% url 'orders:add_to_cart' ctgy.slug %}"><i class="fa fa-shopping-cart"></i></a></li>
-                                    </ul>
-                                </div>
-                                <div class="product__item__text">
-                                    <h6><a href="#">{{ ctgy.title }}</a></h6>
-                                    <h5>{{ ctgy.price }}DH</h5>
-                                </div>
+						{% for  product in product %}
+                
+					<div class="col-lg-4 col-md-6 col-sm-6">
+                        <div class="product__discount__item">
+                            <div class="product__discount__item__pic set-bg" data-setbg="{{ product.image.url }}">
+                                {% if product.discount %}       
+								<div class="product__discount__percent">-{{ product.get_discount_percent }}%</div>
+								{% endif %}
+                                <ul class="product__item__pic__hover">
+                                    <li><a href="{% url 'products:add_to_favorites' product.slug %}" ><i class="fa fa-heart"></i></a></li>
+									<li><a href="{% url 'products:product_detail' product.slug %}"><i class="fa fa-retweet"		></i></a></li>
+									<li><a href="{% url 'orders:add_to_cart' product.slug %}"><i class="fa fa-shopping-cart"></i></a></li></ul>
+							</div>
+							{% if product.discount %}
+                            <div class="product__discount__item__text">                                     
+                                <h5><a href="#">{{ product.title }}</a></h5>
+								
+                                <div class="product__item__price">{{ product.discount }}DH<span>{{ product.price }}DH</span></div>
+								
+								
+								
                             </div>
+							{% else %}
+							<div class="product__item__text">
+                                    <h6><a href="#">{{ product.title }}</a></h6>
+									
+                                    <h5>{{ product.price }}DH</h5>
+                                </div>
+								{% endif %}
                         </div>
-						{% endfor %} 
+                    </div>
+				{% endfor %} 
                     </div>
 					{% if product.has_other_pages %}
                     <div class="product__pagination">
