--- a/src/templates/products/search_product.html
+++ b/src/templates/products/search_product.html
@@ -55,22 +55,37 @@
 					
 						{% if searched %}
 						{% for search in searched %}
-                        <div class="col-lg-4 col-md-6 col-sm-6">
-                            <div class="product__item">
-                                <div class="product__item__pic set-bg" data-setbg="{{ search.image.url }}">
-                                    <ul class="product__item__pic__hover">
-                                        <li><a href="{% url 'products:add_to_favorites' search.slug %}"><i class="fa fa-heart"></i></a></li>
-                                        <li><a href="{% url 'products:product_detail' search.slug %}"><i class="fa fa-retweet"></i></a></li>
-                                        <li><a href="{% url 'orders:add_to_cart' search.slug %}"><i class="fa fa-shopping-cart"></i></a></li>
-                                    </ul>
-                                </div>
-                                <div class="product__item__text">
+                        
+					<div class="col-lg-4 col-md-6 col-sm-6">
+                        <div class="product__discount__item">
+                            <div class="product__discount__item__pic set-bg" data-setbg="{{ search.image.url }}">
+                                {% if search.discount %}       
+								<div class="product__discount__percent">-{{ search.get_discount_percent }}%</div>
+								{% endif %}
+                                <ul class="product__item__pic__hover">
+                                    <li><a href="{% url 'products:add_to_favorites' search.slug %}" ><i class="fa fa-heart"></i></a></li>
+									<li><a href="{% url 'products:product_detail' search.slug %}"><i class="fa fa-retweet"		></i></a></li>
+									<li><a href="{% url 'orders:add_to_cart' search.slug %}"><i class="fa fa-shopping-cart"></i></a></li></ul>
+							</div>
+							{% if search.discount %}
+                            <div class="product__discount__item__text">                                     
+                                <h5><a href="#">{{ search.title }}</a></h5>
+								
+                                <div class="product__item__price">{{ search.discount }}DH<span>{{ search.price }}DH</span></div>
+								
+								
+								
+                            </div>
+							{% else %}
+							<div class="product__item__text">
                                     <h6><a href="#">{{ search.title }}</a></h6>
+									
                                     <h5>{{ search.price }}DH</h5>
                                 </div>
-                            </div>
+								{% endif %}
                         </div>
-						{% endfor %} 
+                    </div>
+				{% endfor %}
 						{% else %}
 						<h5>{% trans 'Not Found!' %}</h5>						
 						{% endif %}
